--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
 /* credit to Donal Donohoe https://codepen.io/donaldonohoe/pen/LyxxVP */
 
 body {
+  position: relative;
   background-image: linear-gradient(
     to bottom right,
     #91defe,
@@ -22,27 +23,49 @@ body {
   justify-content: center;
   height: 100vh;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .layer {
   position: absolute;
   top: 0 ;
   left: 0;
-  width: 100%;
-  height: 100%;	
+  width: 100vw;
+  height: 100vh;	
   pointer-events: none;
 }
-.layer1 {
-  opacity: 0.4;
+
+.rantBubble {
+  animation: float 3.5s ease-in-out infinite;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 10%;
+  left: 40%;
+
+  background: radial-gradient(
+    circle at 75% 30%,
+    white 5px,
+    aqua 8%,
+    darkblue 60%,
+    aqua 100%
+  );
+  box-shadow: inset 0 0 20px #fff, inset 10px 0 46px #eaf5fc,
+    inset 88px 0px 60px #c2d8fe, inset -20px -60px 100px #fde9ea,
+    inset 0 50px 140px #fde9ea, 0 0 90px #fff;
 }
-.layer2 {
-  opacity: 0.5;
-}
-.layer3 {
-  opacity: 0.6;
-}
-.layer4 {
-  opacity: 1;
+
+@keyframes float {
+  0% {
+    transform: translatey(0px);
+  }
+  50% {
+    transform: translatey(-80px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
 }
 
 
@@ -64,7 +87,7 @@ body {
   pointer-events: auto;
 }
 
-.bubble::after {
+.bubble::after, .rantBubble::after {
   content: "";
   position: absolute;
   background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 50%, rgba(255,255,255,0) 100%);
@@ -79,20 +102,6 @@ body {
   opacity: 0.8;
 }
 
-
-@keyframes float {
-  0% {
-    transform: translatey(0px);
-  }
-  50% {
-    transform: translatey(-80px);
-  }
-  100% {
-    transform: translatey(0px);
-  }
-}
-
-
 /* ----- Bubbles ----- */
 
 .bubble-xs {
@@ -101,6 +110,7 @@ body {
   margin-top: -12px;	
   margin-left: -12px;	
   animation: floatxs 10.5s ease-in-out infinite;
+  opacity: 0.4;
 }
 
 .bubble-sm {
@@ -109,6 +119,7 @@ body {
   margin-top: -20px;	
   margin-left: -20px;	
   animation: floatsm 5.5s linear infinite;
+  opacity: 0.5;
 }
 .bubble-md {
   width: 70px;
@@ -116,6 +127,7 @@ body {
   margin-top: -35px;	
   margin-left: -35px;	
   animation: floatmd 8s linear infinite;
+  opacity: 0.6;
 }
 .bubble-lg {
   width: 100px;
@@ -123,6 +135,7 @@ body {
   margin-top: -50px;	
   margin-left: -50px;	
   animation: floatlg 12.5s ease-in-out infinite;
+  opacity: 1;
 }
 
 
@@ -169,132 +182,139 @@ body {
   -webkit-animation: bubbleWobble 0.5s ease;
   -moz-animation: bubbleWobble 0.5s ease;
   animation: bubbleWobble 0.5s ease;
-  background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,0) 0%, rgba(255,255,255,0) 30%, rgba(255,255,255,1) 100%);
-  background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 30%,rgba(255,255,255,1) 100%);
-  background: radial-gradient(ellipse at center,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 30%,rgba(255,255,255,1) 100%);
-  /* filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); */
+}
+
+.rant-bubble-wobble {
+  -webkit-animation: bubbleWobble 0.5s ease;
+  -moz-animation: bubbleWobble 0.5s ease;
+  animation: bubbleWobble 0.5s ease;
+}
+
+@-webkit-keyframes bubbleWobble {
+  0% {
+    -webkit-transform: scale(1);
   }
-  @-webkit-keyframes bubbleWobble {
-    0% {
-      -webkit-transform: scale(1);
-    }
-    20% {
-      -webkit-transform: scale(0.8);
-    }
-    40% {
-      -webkit-transform: scale(1);
-    }
-    60% {
-      -webkit-transform: scale(0.95);
-    } 
-    80% {
-      -webkit-transform: scale(1.03);
-    } 
-    100% {
-      -webkit-transform: scale(1);
-    } 
+  20% {
+    -webkit-transform: scale(0.8);
   }
-  /* @-moz-keyframes bubbleWobble {
-    0% {
-      -moz-transform: scale(1);
-    }
-    20% {
-      -moz-transform: scale(0.8);
-    }
-    40% {
-      -moz-transform: scale(1.1);
-    }
-    60% {
-      -moz-transform: scale(0.95);
-    } 
-    80% {
-      -moz-transform: scale(1.03);
-    } 
-    100% {
-      -moz-transform: scale(1);
-    } 
+  40% {
+    -webkit-transform: scale(1.1);
   }
-  @keyframes bubbleWobble {
-    0% {
-      transform: scale(1);
-    }
-    20% {
-      transform: scale(0.8);
-    }
-    40% {
-      transform: scale(1.1);
-    }
-    60% {
-      transform: scale(0.95);
-    } 
-    80% {
-      transform: scale(1.03);
-    } 
-    100% {
-      transform: scale(1);
-    } 
-  } */
+  60% {
+    -webkit-transform: scale(0.95);
+  } 
+  80% {
+    -webkit-transform: scale(1.03);
+  } 
+  100% {
+    -webkit-transform: scale(1);
+  }
+}
+@-moz-keyframes bubbleWobble {
+  0% {
+    -moz-transform: scale(1);
+  }
+  20% {
+    -moz-transform: scale(0.8);
+  }
+  40% {
+    -moz-transform: scale(1.1);
+  }
+  60% {
+    -moz-transform: scale(0.95);
+  } 
+  80% {
+    -moz-transform: scale(1.03);
+  } 
+  100% {
+    -moz-transform: scale(1);
+  } 
+}
+@keyframes bubbleWobble {
+  0% {
+    transform: scale(1);
+  }
+  20% {
+    transform: scale(0.8);
+  }
+  40% {
+    transform: scale(1.1);
+  }
+  60% {
+    transform: scale(0.95);
+  } 
+  80% {
+    transform: scale(1.03);
+  } 
+  100% {
+    transform: scale(1);
+  } 
+}
 
 /* ----- end of bubble wobbles ----- */
 
 /* ----- Bubble pop ----- */
 .bubble-pop {
-  -webkit-animation: bubblePop 0.4s ease;
-  -moz-animation: bubblePop 0.4s ease;
-  animation: bubblePop 0.4s ease;
+  -webkit-animation: bubblePop 0.5s ease;
+  -moz-animation: bubblePop 0.5s ease;
+  animation: bubblePop 0.5s ease;
   opacity: 0;
+}
+
+.hide {
+  display: none;
+}
+@-webkit-keyframes bubblePop {
+  0% {
+    -webkit-transform: scale(1);
+    opacity: 1;
   }
-  @-webkit-keyframes bubblePop {
-    0% {
-      -webkit-transform: scale(1);
-      opacity: 1;
-    }
-    20% {
-      -webkit-transform: scale(0);
-      opacity: 0.6;
-    }
-    100% {
-      -webkit-transform: scale(0.5);
-      opacity: 0;
-    }
+  20% {
+    -webkit-transform: scale(0);
+    opacity: 0.6;
   }
-  @-moz-keyframes bubblePop {
-    0% {
-      -moz-transform: scale(1);
-      opacity: 1;
-    }
-    20% {
-      -moz-transform: scale(0);
-      opacity: 0.6;
-    }
-    100% {
-      -moz-transform: scale(0.5);
-      opacity: 0;
-    }
+  100% {
+    -webkit-transform: scale(0.5);
+    opacity: 0;
   }
-  @keyframes bubblePop {
-    0% {
-      transform: scale(1);
-      opacity: 1;
-    }
-    20% {
-      transform: scale(0);
-      opacity: 0.6;
-    }
-    100% {
-      transform: scale(0.5);
-      opacity: 0;
-    }
+}
+@-moz-keyframes bubblePop {
+  0% {
+    -moz-transform: scale(1);
+    opacity: 1;
   }
+  20% {
+    -moz-transform: scale(0);
+    opacity: 0.6;
+  }
+  100% {
+    -moz-transform: scale(0.5);
+    opacity: 0;
+  }
+}
+@keyframes bubblePop {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(0);
+    opacity: 0.6;
+  }
+  100% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+}
 /* ----- end of Bubble Pop ----- */
 
 /* ---- Textarea ----- */
 
 .textareaContainer {
   height: fit-content;
-  position: absolute;
-  top: 40%;
-  left: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .rantArea {
@@ -311,6 +331,18 @@ body {
   -moz-box-shadow: 0px 0px 105px 7px rgba(253,244,220,0.9);
   box-shadow: 0px 0px 105px 7px rgba(253,244,220,0.9);
   outline: none;
+  z-index: 1;
+  -webkit-transition: all 0.40s ease-in-out;
+  -moz-transition: all 0.40s ease-in-out;
+  -ms-transition: all 0.40s ease-in-out;
+  -o-transition: all 0.40s ease-in-out;
+}
+
+.rantArea:focus {
+  border: 2px solid rgba(253,244,220, 1);
+  -webkit-box-shadow:0px 0px 29px 19px rgba(253,244,220,0.7);
+    -moz-box-shadow: 0px 0px 29px 19px rgba(253,244,220,0.7);
+    box-shadow: 0px 0px 29px 19px rgba(253,244,220,0.7);
 }
 
 .rantArea::placeholder {
@@ -318,3 +350,19 @@ body {
 }
 
 /* ---- end of Textarea ----- */
+
+
+/* ----- speaker button ------ */
+.buttonContainer {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+/* ----- end of speaker button ------ */
